Fix z-index of extract frameto avoid overlapping of editor component, fix decrypt controller on passwort dialog cancel

--- a/src/content-scripts/extractFrame.css
+++ b/src/content-scripts/extractFrame.css
@@ -8,7 +8,7 @@
   border: 1px solid #dbdbdb;
   border-radius: 4px;
   position: absolute;
-  z-index: 11;
+  z-index: 1;
   visibility: hidden;
   opacity: 0;
   overflow: hidden;
